# we-movie

./: Dockerfile  README.md  docker-compose.yml  install_dependencies.sh  start.sh
we-movie-backend/: .env  Cargo.toml
we-movie-backend/migrations/: 20240316211535_schema.sql
we-movie-backend/src/: lib.rs  main.rs  psql.rs
we-movie-db/: init.sql
we-movie-frontend/: package-lock.json  package.json
we-movie-frontend/src/: App.js  JWTCallback.js  UserHomePage.js
