[package]
name = "we-movie-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-web = "4.3.1"
dotenv = "0.15.0"
oauth2 = "4.4.2"
serde = {version = "1.0.180", features = ["derive"]}
serde_json = "1.0.107"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
