[package]
name = "we-movie-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-rt = "2.8.0"
actix-session = { version = "0.9.0", features = ["redis-rs-tls-session"] }
actix-web = "4.3.1"
awc = { version = "3.5.0" , features = ["rustls"]}
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
oauth2 = "4.4.2"
serde = {version = "1.0.180", features = ["derive"]}
serde_json = "1.0.107"
sqlx = { version = "0.5", features = ["postgres", "runtime-tokio-rustls"] }
